--- a/src/mixins/mixins.sass
+++ b/src/mixins/mixins.sass
@@ -12,7 +12,7 @@
   background-color: #202020
 
 @mixin bg-gray
-  background-color: #2F2F2F
+  background-color: #272727
 
 @mixin bg-ligth-gray
   background-color: #303030
