clear code, create techs & about-me

--- a/src/components/NavTab/NavTab.sass
+++ b/src/components/NavTab/NavTab.sass
@@ -8,6 +8,8 @@
   display: flex
   justify-content: space-between
   align-items: center
+  max-width: 1140px
+  margin: 0 auto
 
 .navigation
   display: flex
@@ -27,6 +29,9 @@
   line-height: 16px
   &__link
     color: #000000
+@media (max-width: 1140px)
+  .nav-tab
+    max-width: 92%
 
 @media (max-width: 583px)
   .signup
