--- a/src/components/Promo/Promo.sass
+++ b/src/components/Promo/Promo.sass
@@ -66,12 +66,14 @@
 
 @media (max-width: 583px)
   .promo
-    padding: 70px 0 75px 0
+    padding: 70px 0 30px 0
     &__title
-      font-size: 30px
+      @include text-30
+      width: 310px
       margin-bottom: 24px
-      line-height: 38px
     &__img
       width: 210px
       height: 206px
-      margin-bottom: 20px
+      margin-bottom: 42px
+    &__text
+      margin-bottom: 81px
