--- a/src/index.sass
+++ b/src/index.sass
@@ -30,4 +30,8 @@ code
 
 @media (max-width: 1140px)
   .container
-    max-width: 92%
+    max-width: 87%
+
+@media (max-width: 320px)
+  .container
+    max-width: 89%
