--- a/src/mixins/mixins.sass
+++ b/src/mixins/mixins.sass
@@ -44,6 +44,15 @@
   color: #FFFFFF
   margin: 0
 
+@mixin text-30
+  font-family: 'Inter'
+  font-style: normal
+  font-weight: 400
+  font-size: 30px
+  line-height: 38px
+  text-align: center
+  letter-spacing: -0.04em
+
 @mixin text-20
   font-family: 'Inter'
   font-style: normal
@@ -51,6 +60,22 @@
   font-size: 20px
   line-height: 24px
   letter-spacing: -0.04em
+  color: #FFFFFF
+
+@mixin text-18
+  font-family: 'Inter'
+  font-style: normal
+  font-weight: 400
+  font-size: 18px
+  line-height: 22px
+  color: #FFFFFF
+
+@mixin text-14
+  font-family: 'Inter'
+  font-style: normal
+  font-weight: 400
+  font-size: 14px
+  line-height: 20px
   color: #FFFFFF
 
 @mixin text-13
@@ -62,20 +87,20 @@
   line-height: 16px
   color: #FFFFFF
 
-@mixin text-14
-  font-family: 'Inter'
-  font-style: normal
-  font-weight: 400
-  font-size: 14px
-  line-height: 20px
-  color: #FFFFFF
-
 @mixin text-12
   font-family: Inter
   font-style: normal
   font-weight: 500
   font-size: 12px
   line-height: 16px
+
+@mixin text-11
+  font-family: 'Inter'
+  font-style: normal
+  font-weight: 400
+  font-size: 11px
+  line-height: 16px
+  color: #FFFFFF
 
 @mixin text-10
   font-family: Inter
