fix style techs & aboutme

--- a/src/mixins/mixins.sass
+++ b/src/mixins/mixins.sass
@@ -44,6 +44,15 @@
   color: #FFFFFF
   margin: 0
 
+@mixin text-40
+  font-family: 'Inter'
+  font-style: normal
+  font-weight: 400
+  font-size: 40px
+  line-height: 40px
+  letter-spacing: -0.04em
+  color: #FFFFFF
+
 @mixin text-30
   font-family: 'Inter'
   font-style: normal
