--- a/src/components/AboutMe/AboutMe.sass
+++ b/src/components/AboutMe/AboutMe.sass
@@ -4,7 +4,7 @@
   padding: 110px 0 100px 0
   &__title
     @include title-text-h3
-    padding-bottom: 22px
+    padding-bottom: 26px
     border-bottom: 1px solid #ffffff
 .profile
   display: flex
@@ -18,6 +18,7 @@
   &__wrapper
     display: flex
     flex-direction: column
+    margin-right: 10px
   &__name
     @include title-text-h1
     margin: 0 0 19px 0
@@ -46,12 +47,53 @@
   &__item
     margin-right: 20px
   &__link
+    @include text-14
     @include link
     text-decoration: none
     color: #ffffff
 
 @media (max-width: 768px)
+  .about-me
+    padding: 90px 0 100px 0
+  .author
+    width: 60%
+    &__name
+      @include text-40
+    &__prossesion
+      @include text-12
+    &__info
+      @include text-12
+
   .avatar
     width: 255px
     height: 307px
+
+@media (max-width: 583px)
+  .about-me
+    padding: 50px 0 100px 0
+    &__title
+      @include text-18
+      padding-bottom: 26px
+  .profile
+    flex-direction: column-reverse
+    align-items: start
+    padding-top: 60px
+
+  .author
+    width: 100%
+    &__name
+      @include text-30
+      text-align: start
+    &__prossesion
+      @include text-11
+      margin-bottom: 20px
+    &__info
+      @include text-11
+      margin-bottom: 40px
+
+  .avatar
+    width: 100%
+    height: 354px
+    margin-bottom: 37px
     &__img
+      object-position: center top
