--- a/src/mixins/mixins.sass
+++ b/src/mixins/mixins.sass
@@ -62,6 +62,15 @@
   text-align: center
   letter-spacing: -0.04em
 
+@mixin text-28
+  font-family: 'Inter'
+  font-style: normal
+  font-weight: 400
+  font-size: 28px
+  line-height: 50px
+  letter-spacing: -0.04em
+  color: #FFFFFF
+
 @mixin text-20
   font-family: 'Inter'
   font-style: normal
