update style Error component & adaptive; clear

--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -2,6 +2,7 @@
 
 .footer
   padding-top: 131px
+  flex: 0 0 auto
   &__container
     max-width: 1140px
     margin: 0 auto
@@ -22,7 +23,6 @@
     @include text-13
     margin: 0
   &-list
-    @include link
     display: flex
     margin: 0
     &__item
