--- a/src/mixins/mixins.sass
+++ b/src/mixins/mixins.sass
@@ -132,7 +132,6 @@
   background-color: none
 
 @mixin link
-  a:active,
-  a:hover,
-  a
-    text-decoration: none
+  text-decoration: none
+  color: #FFFFFF
+  transition: opacity 0.5s linear
