--- a/src/components/Techs/Techs.sass
+++ b/src/components/Techs/Techs.sass
@@ -37,6 +37,9 @@
     text-align: center
     padding-top: 20px
     margin: 5px
+    transition: 0.5s
+  &__item:hover
+    transform: scale(1.1)
 
 @media (max-width: 820px)
   .techs
