--- a/src/mixins/mixins.sass
+++ b/src/mixins/mixins.sass
@@ -20,6 +20,9 @@
 @mixin bg-blue
   background-color: #073042
 
+@mixin bg-ligth-blue
+  background-color: #4285F4
+
 @mixin bg-green
   background-color: #3DDC84
 
