--- a/src/components/SearchForm/SearchForm.sass
+++ b/src/components/SearchForm/SearchForm.sass
@@ -1,6 +1,7 @@
 @import '../../mixins/mixins.sass'
 
 .search-form
+  box-sizing: border-box
   padding: 77px 0 85px
   border-bottom: 1px solid #AAAAAA
   display: flex
@@ -10,19 +11,24 @@
     @include text-13
 
 .search
-  border: none
+  display: block
+  border: 0
   position: relative
   margin: 0
   padding: 0
-  width: 73%
+  width: 80%
   &__input
-    height: 42px
+    display: block
+    box-sizing: border-box
+    // height: 42px
     // opacity: 0.2
     border: 1.5px solid #AAAAAA
     border-radius: 50px
-    padding: 0px 80px 0px 20px
+    padding: 11px 80px 12px 20px
     background-color: inherit
-    width: 100%
+    width: calc(100% - 80px)
+    margin-right: 10px
+    color: #ffffff
   &__input::placeholder
     @include text-14
     color: #8B8B8B
@@ -34,8 +40,8 @@
     width: 80px
     height: 34px
     top: 6px
-    right: -95px
-    bottom: 5px
+    right: -14px
+    bottom: 6px
     background-image: url('../../images/search.svg')
     background-repeat: no-repeat
     background-position: 50% 50%
@@ -47,3 +53,28 @@
     margin: 0
     display: inline-block
     margin-right: 14px
+
+@media (max-width: 1110px)
+  .search-form
+    flex-direction: column
+    width: 100%
+    padding: 57px 0 55px
+  .search
+    width: 100%
+    margin-bottom: 38px
+    &__input
+      width: calc(100% - 100px)
+    &-button
+      right: 5px
+
+@media (max-width: 582px)
+  .search-form
+    padding: 57px 0 44px
+  .search
+    margin-bottom: 45px
+    &__input
+      padding: 11px 80px 12px 18px
+    &__input::placeholder
+      @include text-11
+  .short-film__text
+    @include text-11
