create Movies(MoviesCard/List): style & adaptive

--- a/src/components/Movies/Movies.sass
+++ b/src/components/Movies/Movies.sass
@@ -1,1 +1,16 @@
 @import '../../mixins/mixins.sass'
+
+.movies
+  &__container
+    max-width: 1140px
+    margin: 0 auto
+
+@media (max-width: 1110px)
+  .movies
+    &__container
+      max-width: 92%
+
+@media (max-width: 320px)
+  .movies
+    &__container
+      max-width: 94%
