--- a/src/components/MoviesCardList/MoviesCardList.sass
+++ b/src/components/MoviesCardList/MoviesCardList.sass
@@ -10,4 +10,14 @@
     @include text-12
     border-radius: 6px
     color: #ffffff
-    margin-top: 50px
+    margin-top: 20px
+
+@media (max-width: 1110px)
+  .cards
+    padding: 72px 0 59px 0
+    &__button
+      margin-top: 40px
+
+@media (max-width: 582px)
+  .cards
+    padding: 49px 0 59px 0
