--- a/src/components/Navigation/Navigation.sass
+++ b/src/components/Navigation/Navigation.sass
@@ -22,3 +22,10 @@
   @include text-14
   &__icon
     margin-left: 19px
+
+.mobile-menu
+  display: none
+
+@media (max-width: 768px)
+  .navigation
+    position: relative
