--- a/src/components/MoviesCard/MoviesCard.sass
+++ b/src/components/MoviesCard/MoviesCard.sass
@@ -37,11 +37,15 @@
 .poster
   width: 220px
   height: 100%
+  overflow: hidden
   &__image
     display: block
     width: 100%
     height: 100%
     object-fit: cover
+    transition: 0.5s
+  &__image:hover
+    transform: scale(1.1)
 
 @media (max-width: 582px)
   .card
