--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -4,3 +4,15 @@
   &__wrapper
     display: flex
     padding: 18px 0 18px 0
+    max-width: 1140px
+    margin: 0 auto
+
+@media (max-width: 1110px)
+  .header
+    &__wrapper
+      max-width: 92%
+
+@media (max-width: 320px)
+  .header
+    &__wrapper
+      max-width: 94%
