--- a/src/index.sass
+++ b/src/index.sass
@@ -38,6 +38,48 @@ code
 .link:hover
   opacity: 0.6
 
+.form
+  &__fieldset
+    border: none
+    display: flex
+    flex-direction: column
+    width: 100%
+    margin: 0 0 10px 0
+    padding: 0
+  &__label
+    @include text-10
+    color: #8B8B8B
+    margin-bottom: 10px
+  &__input
+    box-sizing: border-box
+    @include bg-ligth-gray
+    border-radius: 8px
+    height: 46px
+    border: none
+    padding: 0
+    color: #ffffff
+    padding: 15px
+    // &:active
+    //   border: 1px solid #ffffff
+    &-erorr
+      @include text-10
+      color: #EE3465
+      margin-top: 10px
+  &__button
+    width: 100%
+    height: 45px
+    @include btn
+    @include bg-ligth-blue
+    @include text-14
+    border-radius: 3px
+    margin: 69px 0 16px 0
+
+.redirect
+  @include text-14
+  color: #8B8B8B
+  margin: 0
+  &__link
+    color: #4285F4
 @media (max-width: 1140px)
   .container
     max-width: 87%
