--- a/src/mixins/mixins.sass
+++ b/src/mixins/mixins.sass
@@ -74,6 +74,14 @@
   letter-spacing: -0.04em
   color: #FFFFFF
 
+@mixin text-24
+  font-family: 'Inter'
+  font-style: normal
+  font-weight: 500
+  font-size: 24px
+  line-height: 29px
+  color: #FFFFFF
+
 @mixin text-20
   font-family: 'Inter'
   font-style: normal
@@ -133,8 +141,3 @@
 @mixin btn
   border: none
   background-color: none
-
-@mixin link
-  text-decoration: none
-  color: #FFFFFF
-  transition: opacity 0.5s linear
