--- a/src/index.sass
+++ b/src/index.sass
@@ -39,21 +39,23 @@ code
   opacity: 0.6
 
 .form
+  width: 100%
   &__fieldset
     border: none
     display: flex
     flex-direction: column
     width: 100%
-    margin: 0 0 10px 0
+    margin: 0 0 4px 0
     padding: 0
   &__label
     @include text-10
     color: #8B8B8B
-    margin-bottom: 10px
+    margin-bottom: 6px
   &__input
     box-sizing: border-box
     @include bg-ligth-gray
     border-radius: 8px
+    width: 100%
     height: 46px
     border: none
     padding: 0
@@ -63,8 +65,9 @@ code
     //   border: 1px solid #ffffff
     &-erorr
       @include text-10
+      height: 10px
       color: #EE3465
-      margin-top: 10px
+      margin-top: 6px
   &__button
     width: 100%
     height: 45px
@@ -72,18 +75,27 @@ code
     @include bg-ligth-blue
     @include text-14
     border-radius: 3px
-    margin: 69px 0 16px 0
+    margin: 74px 0 14px 0
 
 .redirect
   @include text-14
   color: #8B8B8B
   margin: 0
+  text-align: center
   &__link
     color: #4285F4
 @media (max-width: 1140px)
   .container
     max-width: 87%
 
+@media (max-width: 586px)
+
 @media (max-width: 320px)
   .container
     max-width: 89%
+  .form
+    &__button
+      @include text-12
+      margin: 20.6vh 0 14px 0
+  .redirect
+    @include text-12
