create Profile: style & adaptive

--- a/src/components/AboutMe/AboutMe.sass
+++ b/src/components/AboutMe/AboutMe.sass
@@ -6,15 +6,16 @@
     @include title-text-h3
     padding-bottom: 24px
     border-bottom: 1px solid #ffffff
-.profile
+.author
   display: flex
   padding-top: 66px
   justify-content: space-between
 .author
-  width: 65%
-  display: flex
-  flex-direction: column
-  justify-content: space-between
+  &__bio
+    width: 65%
+    display: flex
+    flex-direction: column
+    justify-content: space-between
   &__wrapper
     display: flex
     flex-direction: column
