--- a/src/components/Profile/Profile.sass
+++ b/src/components/Profile/Profile.sass
@@ -1,1 +1,62 @@
 @import '../../mixins/mixins.sass'
+
+.profile
+  &__container
+    display: flex
+    flex-direction: column
+    align-items: center
+  &__wrapper
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    width: 410px
+    height: 69vh
+    padding-top: 70px
+  &__title
+    @include text-24
+    text-align: center
+    margin: 0 0 108px 0
+  &__footer
+    display: flex
+    flex-direction: column
+    align-items: center
+    @include text-13
+  &__edit-btn
+    @include btn
+    background-color: inherit
+    margin-bottom: 16px
+  &__logout
+    color: #EE3465
+.user
+  &__info
+    display: flex
+    justify-content: space-between
+    width: 100%
+    @include text-11
+    padding: 15px 0 15px 0
+  &__title
+    margin: 0
+  &__data
+    margin: 0
+
+@media (max-width: 768px)
+  .profile
+    &__wrapper
+      height: 43.6vh
+      padding-top: 22.5vh
+    &__title
+      margin: 0 0 79px 0
+
+@media (max-width: 583px)
+  .profile
+    padding-top: 67px
+    &__container
+      max-width: 82%
+    &__wrapper
+      width: 100%
+      padding-top: 0
+      height: 76.7vh
+    &__title
+      margin: 0 0 63px 0
+    &__footer
+      @include text-12
