fix Header, Movies

--- a/src/components/Profile/Profile.sass
+++ b/src/components/Profile/Profile.sass
@@ -34,6 +34,9 @@
     width: 100%
     @include text-11
     padding: 15px 0 15px 0
+    border-bottom: 1px solid #424242
+  &__info:last-child
+    border-bottom: none
   &__title
     margin: 0
   &__data
