--- a/src/index.sass
+++ b/src/index.sass
@@ -66,6 +66,7 @@ code
     &-erorr
       @include text-10
       height: 10px
+      font-weight: 400
       color: #EE3465
       margin-top: 6px
   &__button
