--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,8 +1,10 @@
 @import '../../mixins/mixins.sass'
 
 .header
+  background-color: inherit
   &__wrapper
     display: flex
+    justify-content: space-between
     padding: 18px 0 18px 0
     max-width: 1140px
     margin: 0 auto
