--- a/src/components/Movies/Movies.sass
+++ b/src/components/Movies/Movies.sass
@@ -1,13 +1,9 @@
 @import '../../mixins/mixins.sass'
 
-.movies
-  max-width: 1140px
-  margin: 0 auto
-
 @media (max-width: 1110px)
-  .movies
+  .movies__container
     max-width: 92%
 
 @media (max-width: 320px)
-  .movies
+  .movies__container
     max-width: 94%
