create mobile navigation

--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,6 +1,11 @@
 @import '../../mixins/mixins.sass'
 
 .header
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+  z-index: 100
   background-color: inherit
   &__wrapper
     display: flex
