--- a/src/components/Movies/Movies.sass
+++ b/src/components/Movies/Movies.sass
@@ -1,5 +1,6 @@
 @import '../../mixins/mixins.sass'
-
+.movies
+  margin-top: 76px
 @media (max-width: 1110px)
   .movies__container
     max-width: 92%
