--- a/src/components/AboutMe/AboutMe.sass
+++ b/src/components/AboutMe/AboutMe.sass
@@ -56,7 +56,6 @@
   .about-me
     padding: 90px 0 86px 0
   .author
-    width: 60%
     &__name
       @include text-40
     &__prossesion
@@ -80,6 +79,9 @@
     padding-top: 60px
 
   .author
+    width: 100%
+    display: flex
+    flex-direction: column-reverse
     width: 100%
     &__name
       @include text-30
