fix adaptive style

--- a/src/components/Navigation/Navigation.sass
+++ b/src/components/Navigation/Navigation.sass
@@ -33,7 +33,7 @@
   height: 28px
   position: relative
   cursor: pointer
-  // background-color: #fff
+  margin-right: 7px
   &::before
     content: ''
     position: absolute
