--- a/src/components/AboutMe/AboutMe.sass
+++ b/src/components/AboutMe/AboutMe.sass
@@ -56,10 +56,14 @@
   .about-me
     padding: 90px 0 86px 0
   .author
+    &__bio
+      width: 60%
     &__name
       @include text-40
+      margin: 0 0 15px 0
     &__prossesion
       @include text-12
+      margin: 0 0 22px 0
     &__info
       @include text-12
 
@@ -82,7 +86,8 @@
     width: 100%
     display: flex
     flex-direction: column-reverse
-    width: 100%
+    &__bio
+      width: 100%
     &__name
       @include text-30
       text-align: start
@@ -96,6 +101,6 @@
   .avatar
     width: 100%
     height: 354px
-    margin-bottom: 37px
+    margin-bottom: 34px
     &__img
       object-position: center top
