fixing styles after review

--- a/src/components/SearchForm/SearchForm.sass
+++ b/src/components/SearchForm/SearchForm.sass
@@ -44,7 +44,13 @@
     bottom: 6px
     background-image: url('../../images/search.svg')
     background-repeat: no-repeat
+    // background-size: 30%
     background-position: 50% 50%
+    transition: all 0.3s linear
+    &:hover
+      opacity: 0.6
+      // background-size: 27%
+
 .short-film
   display: flex
   align-items: center
