--- a/src/components/SignNavbar/SignNavbar.sass
+++ b/src/components/SignNavbar/SignNavbar.sass
@@ -23,6 +23,10 @@
     line-height: 16px
     color: #000000
 
+.signin
+  &-item__link
+    color: #000000
+
 @media (max-width: 1140px)
   .sign-navbar
     max-width: 92%
