--- a/src/components/AboutProject/AboutProject.sass
+++ b/src/components/AboutProject/AboutProject.sass
@@ -100,6 +100,8 @@
         @include text-11
         // height: 35px
         margin-bottom: 8px
+        &_left
+          color: #000000
       &__type
         @include text-11
     &__box
