--- a/src/components/Navigation/Navigation.sass
+++ b/src/components/Navigation/Navigation.sass
@@ -28,6 +28,7 @@
 .navigation-mobile
   display: flex
   flex-direction: column
+
 .burger-btn
   width: 28px
   height: 28px
@@ -42,6 +43,7 @@
     height: 3px
     background-color: #fff
     z-index: 1000
+    transition: top 300ms 300ms, transform 300ms cubic-bezier(0.23, 1, 0.32, 1)
   &::after
     content: ''
     position: absolute
@@ -50,6 +52,7 @@
     height: 3px
     background-color: #fff
     z-index: 1000
+    transition: bottom 300ms 300ms, transform 300ms cubic-bezier(0.23, 1, 0.32, 1)
 
 .burger-btn .burger-btn__span
   position: absolute
@@ -58,6 +61,23 @@
   height: 3px
   background-color: #fff
   z-index: 1000
+
+.burger-btn .burger-btn__span
+
+.burger-btn_active.burger-btn::before
+  content: ""
+  top: 45%
+  transform: rotate(45deg)
+  transition: top 300ms, transform 300ms 300ms cubic-bezier(0.68, -0.55, 0.265, 1.55)
+
+.burger-btn_active.burger-btn_active::after
+  content: ""
+  bottom: 45%
+  transform: rotate(-45deg)
+  transition: bottom 300ms, transform 300ms 300ms cubic-bezier(0.68, -0.55, 0.265, 1.55)
+
+.burger-btn_active .burger-btn__span
+  display: none
 
 .mobile-menu
   position: fixed
