--- a/src/index.sass
+++ b/src/index.sass
@@ -5,7 +5,7 @@
 body
   @include bg-black
   margin: 0
-  font-family: 'Inter', 'Roboto',
+  font-family: Inter, Arial, Helvetica, sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
