create hook(start version):useInput, useValidation

--- a/src/index.sass
+++ b/src/index.sass
@@ -82,6 +82,8 @@ code
     @include text-14
     border-radius: 3px
     margin: 74px 0 14px 0
+  &__button:disabled
+    @include bg-gray
 
 .redirect
   @include text-14
