--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -7,6 +7,7 @@
   right: 0
   z-index: 100
   background-color: inherit
+  backdrop-filter: blur(5px)
   &__wrapper
     display: flex
     justify-content: space-between
