create protection route

--- a/src/components/Promo/Promo.sass
+++ b/src/components/Promo/Promo.sass
@@ -25,15 +25,13 @@
     max-width: 300px
     margin-bottom: 146px
   &__btn
-    @include btn
     color: #ffffff
     background-color: inherit
     border: 1px solid #ffffff
     opacity: 0.6
     box-sizing: border-box
+    padding: 10px 20px 10px 20px
     border-radius: 3px
-    width: 129px
-    height: 36px
     font-weight: 500
     font-size: 12px
     line-height: 16px
