--- a/src/components/Login/Login.sass
+++ b/src/components/Login/Login.sass
@@ -13,8 +13,8 @@
   &__title
     @include text-24
     margin: 36px 0 37px 0
-  &__button
-    margin-top: 162px
+.login-form__footer
+  margin-top: 162px
 
 @media (max-width: 586px)
   .login
@@ -27,5 +27,5 @@
       justify-content: flex-start
     &__title
       margin: 47px 0 10vh 0
-    &__button
-      margin-top: 32vh
+  .login-form__footer
+    margin-top: 32vh
