--- a/src/components/Promo/Promo.sass
+++ b/src/components/Promo/Promo.sass
@@ -12,6 +12,7 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+    align-items: start
   &__title
     @include title-text-h1
     margin-bottom: 36px
@@ -27,6 +28,7 @@
   &__btn
     color: #ffffff
     background-color: inherit
+    display: inline-block
     border: 1px solid #ffffff
     opacity: 0.6
     box-sizing: border-box
@@ -35,6 +37,7 @@
     font-weight: 500
     font-size: 12px
     line-height: 16px
+    width: auto
   &__img
     object-fit: cover
     margin-bottom: 48px
