--- a/src/index.sass
+++ b/src/index.sass
@@ -77,13 +77,12 @@ code
     margin: 54px 0 14px 0
     position: relative
     padding-top: 20px
-  &__error-server
+  &__server-message
     position: absolute
     top: 0
     margin: 0
     padding: 0
     @include text-10
-    color: #EE3465
   &__button
     width: 100%
     height: 45px
@@ -93,6 +92,12 @@ code
     border-radius: 3px
   &__button:disabled
     @include bg-gray
+
+.server-message
+  &__error
+    color: #EE3465
+  &__success
+    color: #3DDC84
 
 .redirect
   @include text-14
