create sort&search movies

--- a/src/components/MoviesCard/MoviesCard.sass
+++ b/src/components/MoviesCard/MoviesCard.sass
@@ -34,6 +34,15 @@
     border: none
     &_active
       background-image: url('../../images/like_active.svg')
+  &__delete
+    background-image: url('../../images/delete.svg')
+    background-repeat: no-repeat
+    background-position: 50% 50%
+    width: 14px
+    height: 12px
+    background-color: inherit
+    border: none
+
 .poster
   width: 220px
   height: 100%
