--- a/src/components/SearchForm/SearchForm.sass
+++ b/src/components/SearchForm/SearchForm.sass
@@ -47,6 +47,8 @@
     transition: all 0.3s linear
     &:hover
       opacity: 0.6
+    &:disabled
+      @include bg-ligth-gray
 
 .short-film
   display: flex
