update chekbox, create useLocalStorage

--- a/src/components/MoviesCardList/MoviesCardList.sass
+++ b/src/components/MoviesCardList/MoviesCardList.sass
@@ -11,6 +11,10 @@
     border-radius: 6px
     color: #ffffff
     margin-top: 20px
+  &__pargraph
+    color: #ffffff
+    @include text-12
+    text-align: center
 
 @media (max-width: 1110px)
   .cards
