--- a/src/components/Profile/Profile.sass
+++ b/src/components/Profile/Profile.sass
@@ -28,6 +28,9 @@
     margin-bottom: 16px
   &__logout
     color: #EE3465
+  &__text
+    @include text-11
+    color: #3DDC84
 .user
   &__info
     display: flex
