--- a/src/components/Promo/Promo.sass
+++ b/src/components/Promo/Promo.sass
@@ -12,7 +12,7 @@
     display: flex
     flex-direction: column
     justify-content: space-between
-    align-items: start
+    align-items: flex-start
   &__title
     @include title-text-h1
     margin-bottom: 36px
